# nsrw_test

./: .gitignore  AI_ASSISTED_DEVELOPMENT_REPORT.md  HOST_SPEC_RPi.md  LICENSE  PRODUCTION_CODE_ANALYSIS.md  PYTHON_PRODUCTION_PROTOCOL_COMPARISON.md  README.md  SETUP_PROGRESS.md  TESTING_REPORT.md  WIRING_SETUP.md  config.example.toml  launch_debug_tui.sh  launch_tui.sh  pyproject.toml
nss_host/: __init__.py  commands.py  config.py  crc_ccitt.py  icd_fields.py  nsp.py  serial_link.py  slip.py  tables.py  telemetry.py
nss_host/scenarios/: __init__.py  icd_compliance.py  runner.py
nss_host/scenarios/examples/: speed_ramp.json
nss_host/tests/: __init__.py  test_crc.py  test_icd_fields.py  test_nsp.py  test_protocol_compliance.py  test_slip.py
nss_host/tui/: __init__.py  debug_tui.py  palette.py  tui.py  widgets_new.py
scripts/: enable_uart.sh  setup_udev.sh
tools/: __init__.py  bench_rtt.py  dump_telemetry.py  fuzz_cmds.py  nsp_send.py  record.py
